adds edit review page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -260,3 +260,14 @@ a.smaller-icon
   li:last-child
     border-bottom: none
 
+.rating-textarea
+  background-color: rgba(#fff, 0.0)
+  border: 2px solid $brown
+  border-radius: 5px
+  width: 700px
+  height: 400px
+  padding: 10px
+
+.big-stars
+  font-size: 150%
+
