--- a/app/assets/stylesheets/stars.sass
+++ b/app/assets/stylesheets/stars.sass
@@ -3,7 +3,7 @@ $star_hover_color: lighten($orange, 13%)
 
 .star-rating  
   font-family: 'FontAwesome'
-  margin: 50px auto
+  margin: 0 auto
   > fieldset 
     border: none
     display: inline-block
