finishes friends page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -271,3 +271,26 @@ a.smaller-icon
 .big-stars
   font-size: 150%
 
+.fa-user-secret
+  color: desaturate(lighten($green, 16%), 30%)
+
+.nav.nav-tabs
+  border-color: $brown
+  padding-right: 0
+  a
+    border-color: $brown
+    color: $brown
+    &:hover, &:focus
+      color: #fff
+  .active
+    a
+      border-color: $brown
+      background-color: $brown
+      color: #fff
+      &:hover, &:focus
+        border-color: $brown
+        background-color: $brown
+        color: #fff
+
+.green.smaller-icon
+  color: $green
