--- a/app/views/ui/about-me-my-reviews.html.haml
+++ b/app/views/ui/about-me-my-reviews.html.haml
@@ -41,6 +41,7 @@
             %a(href='#')= fa_icon 'share-square-o', text: 'read more'
       %br
       %a(href='#' class='btn btn-default default-button') Edit Review
+      %a(href='#' class='btn btn-default default-button') Delete Review
       %hr
 
     .review
@@ -66,6 +67,7 @@
             %a(href='#')= fa_icon 'share-square-o', text: 'read more'
       %br
       %a(href='#' class='btn btn-default default-button') Edit Review
+      %a(href='#' class='btn btn-default default-button') Delete Review
       %hr
 
     .review
