adds find friend page

--- a/app/views/ui/about-me-my-friends-blocked.html.haml
+++ b/app/views/ui/about-me-my-friends-blocked.html.haml
@@ -24,41 +24,41 @@
       %li(role='presentation')
         %a(href='#') Pending (3)
       %li(role='presentation' class='active')
-        %a(href='#') blocked (7)
+        %a(href='#') blocked & rejected (7)
       %br
     %ul.list-of-friends
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Unblock'
+            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user-secret', text: 'Joe Swansonrital'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Unblock'
+            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user-secret', text: 'Bob Saget'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Unblock'
+            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Unblock'
+            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Unblock'
+            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Unblock'
+            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user-secret', text: 'Timmothy Wan Der Koi'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Unblock'
+            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
