--- a/app/views/ui/about-me-my-friends-pending.html.haml
+++ b/app/views/ui/about-me-my-friends-pending.html.haml
@@ -24,7 +24,7 @@
       %li(role='presentation' class='active')
         %a(href='#') Pending (3)
       %li(role='presentation')
-        %a(href='#') blocked (7)
+        %a(href='#') blocked & rejected (7)
       %br
     %ul.list-of-friends
       %li
