--- a/app/views/ui/about-me-my-friends.html.haml
+++ b/app/views/ui/about-me-my-friends.html.haml
@@ -17,14 +17,14 @@
         %a(href='#') Add new Category
       %li(role='presentation')
         %a(href='#') Flags
-  .col-md-8
+  .col-md-6
     %ul(class='nav nav-tabs')
       %li(role='presentation' class='active')
         %a(href='#') Friends (5)
       %li(role='presentation')
         %a(href='#') Pending (3)
       %li(role='presentation')
-        %a(href='#') blocked (7)
+        %a(href='#') blocked & rejected (7)
       %br
     %ul.list-of-friends
       %li
@@ -32,28 +32,23 @@
           %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
           %span(class='pull-right')
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
-            %a(href='#' class='smaller-icon')= fa_icon 'close', text: 'delete'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user-secret', text: 'Joe Biden'
           %span(class='pull-right')
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
-            %a(href='#' class='smaller-icon')= fa_icon 'close', text: 'delete'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user-secret', text: 'Bob Sagget'
           %span(class='pull-right')
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
-            %a(href='#' class='smaller-icon')= fa_icon 'close', text: 'delete'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user-secret', text: 'Stive Colbert'
           %span(class='pull-right')
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
-            %a(href='#' class='smaller-icon')= fa_icon 'close', text: 'delete'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user-secret', text: 'Tracy Johanson'
           %span(class='pull-right')
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
-            %a(href='#' class='smaller-icon')= fa_icon 'close', text: 'delete'
