adds my messages  page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -45,6 +45,11 @@ $btn-default-border: $brown
 $dropdown-bg: #fff
 $nav-link-hover-bg: rgba($green, 0.8)
 
+// tables
+$table-bg-hover: rgba(#fff, 1.0)
+$table-bg-accent: rgba(#fff, 0.7)
+$table-border-color: lighten(desaturate($brown, 40%), 50%)
+
 $gray-base: $brown
 $gray-dark: $brown
 $brand-primary: $brown
