--- a/app/views/ui/find-friend.html.haml
+++ b/app/views/ui/find-friend.html.haml
@@ -4,7 +4,7 @@
     .form-sign-up-log-in
       %form.form-inline
         .form-group
-          %input(type='text' class='form-control' placeholder='Name...')
+          %input(type='text' class='form-control' placeholder='Name...' autofocus)
           %button(type='submit' class='btn btn-default default-button')
             Search
 .row
@@ -15,34 +15,56 @@
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Mary Smith'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Joe Swansonrital'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Bob Saget'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Mary Smith'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Mary Smith'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Mary Smith'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Timmothy Wan Der Koi'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'user-plus', text: 'Add Friend'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+
+      %li
+        %span.cl-effect-12
+          %a(href='#')= fa_icon 'user', text: 'Timmothy Wan Der Koi'
+          %span(class='pull-right')
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+
+      %li
+        %span.cl-effect-12
+          %a(href='#')= fa_icon 'user', text: 'Timmothy Wan Der Koi'
+          %span(class='pull-right')
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+
+      %li
+        %span.cl-effect-12
+          %a(href='#')= fa_icon 'user', text: 'Timmothy Wan Der Koi'
+          %span(class='pull-right')
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+
+.row
+  .text-center.more-reviews-button
+    %a(href='#' class='btn btn-primary') More Users
