adds new message page

--- a/app/views/ui/messages-unread-and-read.html.haml
+++ b/app/views/ui/messages-unread-and-read.html.haml
@@ -1,4 +1,9 @@
 %h1.text-center.large-heading My Messages
+.text-center
+  %a(href='#' class='btn btn-primary') New message
+%br
+%br
+
 
 .row
   .col-md-10.col-md-offset-1
@@ -20,8 +25,8 @@
           %th Actions
       %tbody
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -31,8 +36,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -42,8 +47,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -53,8 +58,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -64,8 +69,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -73,5 +78,4 @@
             %span.cl-effect-12
               %a(href='#')= fa_icon 'tag', text: 'important'
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
-
 
