--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -303,3 +303,13 @@ a.smaller-icon
 .search-friend
   width: 355px
   margin: 0 auto
+
+table 
+  tr
+    height: 60px
+    a
+      margin-top: 7px
+
+.table-padding-cell
+  padding-top: 15px !important
+
