--- a/app/views/ui/about-me-my-friends.html.haml
+++ b/app/views/ui/about-me-my-friends.html.haml
@@ -17,7 +17,7 @@
         %a(href='#') Add new Category
       %li(role='presentation')
         %a(href='#') Flags
-  .col-md-6
+  .col-md-8
     %ul(class='nav nav-tabs')
       %li(role='presentation' class='active')
         %a(href='#') Friends (5)
@@ -31,24 +31,76 @@
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
           %span(class='pull-right')
+            %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
+
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Joe Biden'
+          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
           %span(class='pull-right')
+            %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
+
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Bob Sagget'
+          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
           %span(class='pull-right')
+            %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
+
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Stive Colbert'
+          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
           %span(class='pull-right')
+            %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
+
       %li
         %span.cl-effect-12
-          %a(href='#')= fa_icon 'user-secret', text: 'Tracy Johanson'
+          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
           %span(class='pull-right')
+            %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
             %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
+
+      %li
+        %span.cl-effect-12
+          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %span(class='pull-right')
+            %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
+            %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
+
+      %li
+        %span.cl-effect-12
+          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %span(class='pull-right')
+            %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
+            %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
+
+      %li
+        %span.cl-effect-12
+          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %span(class='pull-right')
+            %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
+            %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
+
+      %li
+        %span.cl-effect-12
+          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %span(class='pull-right')
+            %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
+            %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
+
+      %li
+        %span.cl-effect-12
+          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %span(class='pull-right')
+            %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
+            %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
+
+      %li
+        %span.cl-effect-12
+          %a(href='#')= fa_icon 'user-secret', text: 'Mary Smith'
+          %span(class='pull-right')
+            %a(href='#' class='green smaller-icon')= fa_icon 'envelope-o', text: 'send mail'
+            %a(href='#' class='smaller-icon')= fa_icon 'ban', text: 'block'
+
