--- a/app/views/ui/messages-important.html.haml
+++ b/app/views/ui/messages-important.html.haml
@@ -1,4 +1,8 @@
 %h1.text-center.large-heading My Messages
+.text-center
+  %a(href='#' class='btn btn-primary') New message
+%br
+%br
 
 .row
   .col-md-10.col-md-offset-1
@@ -20,8 +24,8 @@
           %th Actions
       %tbody
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -31,8 +35,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -42,8 +46,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -53,8 +57,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -64,8 +68,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -75,8 +79,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -86,8 +90,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -97,8 +101,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -108,8 +112,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -119,8 +123,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -130,8 +134,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -141,8 +145,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -152,8 +156,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -163,8 +167,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -174,8 +178,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -185,8 +189,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -196,8 +200,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -207,8 +211,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -218,8 +222,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -229,8 +233,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
@@ -240,30 +244,8 @@
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
-          %th(scope='row') 1
-          %td Joe Biden
-          %td
-            %span.cl-effect-12
-              %a(href='#') Tukaj moras omejiti znake za naslov  40z
-          %td
-            %span.cl-effect-12
-              %a(href='#')= fa_icon 'exchange', text: 'bach to read'
-              %a(href='#')= fa_icon 'trash-o', text: 'delete'
-
-        %tr
-          %th(scope='row') 1
-          %td Joe Biden
-          %td
-            %span.cl-effect-12
-              %a(href='#') Tukaj moras omejiti znake za naslov  40z
-          %td
-            %span.cl-effect-12
-              %a(href='#')= fa_icon 'exchange', text: 'bach to read'
-              %a(href='#')= fa_icon 'trash-o', text: 'delete'
-
-        %tr
-          %th(scope='row') 143
-          %td Joe Biden
+          %th(scope='row' class='table-padding-cell') 1
+          %td.table-padding-cell Joe Biden
           %td
             %span.cl-effect-12
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
