small changes to ui

--- a/app/views/ui/messages-important.html.haml
+++ b/app/views/ui/messages-important.html.haml
@@ -31,7 +31,7 @@
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
           %td
             %span.cl-effect-12
-              %a(href='#')= fa_icon 'exchange', text: 'bach to read'
+              %a(href='#')= fa_icon 'exchange', text: 'back to read'
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
@@ -42,7 +42,7 @@
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
           %td
             %span.cl-effect-12
-              %a(href='#')= fa_icon 'exchange', text: 'bach to read'
+              %a(href='#')= fa_icon 'exchange', text: 'back to read'
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
@@ -53,7 +53,7 @@
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
           %td
             %span.cl-effect-12
-              %a(href='#')= fa_icon 'exchange', text: 'bach to read'
+              %a(href='#')= fa_icon 'exchange', text: 'back to read'
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
@@ -64,7 +64,7 @@
               %a(href='#') Tukaj moras omejiti znake za naslov  40z
           %td
             %span.cl-effect-12
-              %a(href='#')= fa_icon 'exchange', text: 'bach to read'
+              %a(href='#')= fa_icon 'exchange', text: 'back to read'
               %a(href='#')= fa_icon 'trash-o', text: 'delete'
 
         %tr
