--- a/app/views/ui/about-me-my-company.html.haml
+++ b/app/views/ui/about-me-my-company.html.haml
@@ -22,6 +22,10 @@
       %span.cl-effect-12
         %a(href='#' class='company-name') McDonalds
     .row
+      %a(href='#' class='label label-primary') Travel
+      %a(href='#'class='label label-primary') Hotels
+      %a(href='#'class='label label-primary') Restaurants
+    .row
       .average-stars.company-stars
         = fa_icon 'star'
         = fa_icon 'star'
