--- a/app/views/ui/category-show-page.html.haml
+++ b/app/views/ui/category-show-page.html.haml
@@ -1,5 +1,5 @@
-%h1.large-heading.text-center Write a Review
-%h4.text-center for listed Companiew below
+%h1.large-heading.text-center Category
+%h3.text-center Travel
 
 .review
   .row
@@ -8,8 +8,6 @@
         %a(href='#' class='company-name') The Big Joe's Pizzaria
       .col-md-12.company-stars
         %a(href='#' class='label label-primary') Travel
-        %a(href='#'class='label label-primary') Hotels
-        %a(href='#'class='label label-primary') Restaurants
       .review-stars.col-md-12.company-stars.average-stars
         = fa_icon 'star'
         = fa_icon 'star'
@@ -40,7 +38,7 @@
       %span.cl-effect-12
         %a(href='#' class='company-name') McDonalds
       .col-md-12.company-stars
-        %a(href='#'class='label label-primary') Restaurants
+        %a(href='#'class='label label-primary') Travel
       .review-stars.col-md-12.company-stars.average-stars
         = fa_icon 'star'
         = fa_icon 'star'
@@ -70,6 +68,8 @@
     .col-md-5
       %span.cl-effect-12
         %a(href='#' class='company-name') McDonalds
+      .col-md-12.company-stars
+        %a(href='#' class='label label-primary') Travel
       .review-stars.col-md-12.company-stars.average-stars
         = fa_icon 'star'
         = fa_icon 'star'
