--- a/app/views/ui/company-show-page.html.haml
+++ b/app/views/ui/company-show-page.html.haml
@@ -7,6 +7,10 @@
       .col-md-7
         %span.cl-effect-12
           %a(href='#' class='company-name') McDonalds
+        .col-md-12.company-stars
+          %a(href='#' class='label label-primary') Travel
+          %a(href='#'class='label label-primary') Hotels
+          %a(href='#'class='label label-primary') Restaurants
         .average-stars.col-md-12.company-stars
           = fa_icon 'star'
           = fa_icon 'star'
