--- a/app/views/ui/search-results.html.haml
+++ b/app/views/ui/search-results.html.haml
@@ -5,6 +5,10 @@
     .col-md-5
       %span.cl-effect-12
         %a(href='#' class='company-name') The Big Joe's Pizzaria
+      .col-md-12.company-stars
+        %a(href='#' class='label label-primary') Travel
+        %a(href='#'class='label label-primary') Hotels
+        %a(href='#'class='label label-primary') Restaurants
       .review-stars.col-md-12.company-stars.average-stars
         = fa_icon 'star'
         = fa_icon 'star'
@@ -34,6 +38,8 @@
     .col-md-5
       %span.cl-effect-12
         %a(href='#' class='company-name') McDonalds
+      .col-md-12.company-stars
+        %a(href='#'class='label label-primary') Restaurants
       .review-stars.col-md-12.company-stars.average-stars
         = fa_icon 'star'
         = fa_icon 'star'
@@ -63,6 +69,11 @@
     .col-md-5
       %span.cl-effect-12
         %a(href='#' class='company-name') McDonalds
+      .col-md-12.company-stars
+        %a(href='#' class='label label-primary') Travel
+        %a(href='#' class='label label-primary') Food
+        %a(href='#'class='label label-primary') Hotels
+        %a(href='#'class='label label-primary') Restaurants
       .review-stars.col-md-12.company-stars.average-stars
         = fa_icon 'star'
         = fa_icon 'star'
