add "back" button where possible

--- a/app/views/ui/about-me-edit-review.html.haml
+++ b/app/views/ui/about-me-edit-review.html.haml
@@ -35,3 +35,4 @@
           %label{:for => "star1", :title => "Very Poor"} 1 star
       %textarea.rating-textarea This is my review text. This restaurant is the Best.
       %input(type='submit' class='btn btn-primary btn-lg' value='Save')
+      %a(href='#' type='submit' class='btn btn-default default-button btn-lg') Back
