--- a/app/views/ui/find-friend.html.haml
+++ b/app/views/ui/find-friend.html.haml
@@ -15,55 +15,55 @@
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Mary Smith'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Friend Request'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Joe Swansonrital'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Friend Request'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Bob Saget'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Friend Request'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Mary Smith'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Friend Request'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Mary Smith'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Friend Request'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Mary Smith'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Friend Request'
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Timmothy Wan Der Koi'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Friend Request'
 
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Timmothy Wan Der Koi'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Friend Request'
 
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Timmothy Wan Der Koi'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Friend Request'
 
       %li
         %span.cl-effect-12
           %a(href='#')= fa_icon 'user', text: 'Timmothy Wan Der Koi'
           %span(class='pull-right')
-            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Send Request'
+            %a(href='#' class='smaller-icon green')= fa_icon 'paper-plane-o', text: 'Friend Request'
 
 .row
   .text-center.more-reviews-button
