--- a/app/views/ui/write-a-review.html.haml
+++ b/app/views/ui/write-a-review.html.haml
@@ -1,5 +1,5 @@
 %h1.large-heading.text-center Write a Review
-%h4.text-center for listed Companiew below
+%h4.text-center for listed Companies below
 
 .review
   .row
