--- a/app/views/ui/new-review.html.haml
+++ b/app/views/ui/new-review.html.haml
@@ -19,3 +19,4 @@
           %label{:for => "star1", :title => "Very Poor"} 1 star
       %textarea.rating-textarea
       %input(type='submit' class='btn btn-primary btn-lg' value='Save')
+      %a(href='#' type='submit' class='btn btn-default default-button btn-lg') Back
