--- a/app/views/ui/review-show-page.html.haml
+++ b/app/views/ui/review-show-page.html.haml
@@ -28,5 +28,5 @@
       %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'empire', text: 'cool'
   .row
     .text-center.more-reviews-button
-      %a(href='#' class='btn btn-primary btn-lg') Go Back
+      %a(href='#' class='btn btn-default default-button btn-lg') Go Back
 
