adds tests and model message

--- a/app/views/ui/about-me-settings.html.haml
+++ b/app/views/ui/about-me-settings.html.haml
@@ -28,7 +28,7 @@
         .form-group
           %label(for='password' class='col-sm-4 control-label') Password
           .col-sm-7
-            %input(type='password' class='form-control' id='password' placeholder='Your password goes here...')
+            %input(type='password' class='form-control' id='password' placeholder='Change your password here...')
         .form-group
           %label(for='full_name' class='col-sm-4 control-label')
             Change account role
