--- a/app/views/ui/about-us.html.haml
+++ b/app/views/ui/about-us.html.haml
@@ -3,7 +3,7 @@
   No us just me. So if a I can build this simple web app so can 
   %span.bevan
     YOU! 
-  Watch how this app was built on
+  Watch how I built this app on
   %span.cl-effect-12
     %a(href='#')Livecoding.tv 
 .toni-portrait
