--- a/app/views/ui/home.html.haml
+++ b/app/views/ui/home.html.haml
@@ -1,4 +1,5 @@
 %h1.text-center.large-heading Recent reviews
+%br
 .review
   .row.col-md-12
     %span.cl-effect-12
@@ -28,6 +29,7 @@
       %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'lightbulb-o', text: 'useful'
       %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'smile-o', text: 'funny'
       %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'empire', text: 'cool'
+      %a(href='#' class='btn btn-primary pull-right')= fa_icon 'flag', text: 'flag'
 
   %hr
 
