--- a/app/views/ui/about-me-all-users-change-role.html.haml
+++ b/app/views/ui/about-me-all-users-change-role.html.haml
@@ -1,10 +1,10 @@
-%h1.text-center.large-heading My Settings
-%br
+%h1.text-center.large-heading Change role
+%h3.text-center for Kelly Clarson
 
 .row
   .col-md-3
     %ul.nav.nav-pills.nav-stacked.text-center
-      %li(role='presentation' class='active')
+      %li(role='presentation')
         %a(href='#') Settings
       %li(role='presentation')
         %a(href='#') Reviews
@@ -15,21 +15,17 @@
       %li(role='presentation')
         %a(href='#') Add new Company
       %li(role='presentation')
+        %a(href='#') Categories
+      %li(role='presentation')
         %a(href='#') Add new Category
       %li(role='presentation')
         %a(href='#') Flags
-  .col-md-9
+      %li(role='presentation' class='active')
+        %a(href='#') All Users
+  .col-md-8
     %br
     .form-sign-up-log-in
       %form.form-horizontal
-        .form-group
-          %label(for='full_name' class='col-sm-4 control-label') Full Name
-          .col-sm-7
-            %input(type='text' class='form-control' id='full_name' value='Toni Cesarek' placeholder='Write your full name...' autofocus)
-        .form-group
-          %label(for='password' class='col-sm-4 control-label') Password
-          .col-sm-7
-            %input(type='password' class='form-control' id='password' placeholder='Change your password here...')
         .form-group
           %label(for='full_name' class='col-sm-4 control-label')
             Change account role
@@ -40,6 +36,9 @@
             %label(class='checkbox-inline')
               %input(type='radio' name='box-1' value='owner')
               Business Owner
+            %label(class='checkbox-inline')
+              %input(type='radio' name='box-1' value='admin')
+              Admin
         .form-group
           .col-sm-offset-4.col-sm-10
-            %button(type='submit' class='btn btn-primary') Save
+            %input(type='submit'class='btn btn-primary' value='Save')
