--- a/app/views/ui/company-show-page.html.haml
+++ b/app/views/ui/company-show-page.html.haml
@@ -57,6 +57,7 @@
             %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'lightbulb-o', text: 'useful'
             %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'smile-o', text: 'funny'
             %a(href='#' class='btn btn-info useful-funny-cool-btn')= fa_icon 'empire', text: 'cool'
+            %a(href='#' class='btn btn-primary pull-right')= fa_icon 'flag', text: 'flag'
 
         %hr
       .review
