adds login signup to the app

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -60,6 +60,7 @@ $link-hover-decoration: none
 @import "bootstrap"
 @import font-awesome
 @import 'stars'
+@import 'turbolinks'
 @import 'hover_effects'
 
 body
@@ -228,7 +229,7 @@ a:hover
   color: lighten(desaturate($light_brown, 30%), 40%)
 
 .address
-  padding-top: 30px
+  padding-top: 17px
 
 .nav-stacked li a
   border: 2px solid $brown
@@ -325,3 +326,6 @@ table
 
 .red
   color: $light_brown
+
+.submit-form-button
+  margin-left: 233.328px + 10px
