--- a/app/views/ui/write-a-review.html.haml
+++ b/app/views/ui/write-a-review.html.haml
@@ -24,9 +24,7 @@
           = fa_icon 'eur', class: 'eur-empty'
           = fa_icon 'eur', class: 'eur-empty'
     .col-md-5.address
-      %div Nobelova street 34
-      %div 1000 Ljubljana
-      %div Slovenia
+      %div Ljubljana, Slovenia
     .col-md-2
       %br
       %br
@@ -55,9 +53,7 @@
           = fa_icon 'eur', class: 'eur-empty'
           = fa_icon 'eur', class: 'eur-empty'
     .col-md-5.address
-      %div Nobelova street 34
-      %div 1000 Ljubljana
-      %div Slovenia
+      %div Ljubljana, Slovenia
     .col-md-2
       %br
       %br
@@ -84,9 +80,7 @@
           = fa_icon 'eur', class: 'eur-empty'
           = fa_icon 'eur', class: 'eur-empty'
     .col-md-5.address
-      %div Nobelova street 34
-      %div 1000 Ljubljana
-      %div Slovenia
+      %div Ljubljana, Slovenia
     .col-md-2
       %br
       %br
