--- a/app/views/ui/about-me-add-new-company.html.haml
+++ b/app/views/ui/about-me-add-new-company.html.haml
@@ -26,28 +26,30 @@
           .col-sm-7
             %input(type='text' class='form-control' id='full_name'  placeholder='Name of the Company...' autofocus)
         .form-group
-          %label(for='full_name' class='col-sm-4 control-label') Address
+          %label(for='city' class='col-sm-4 control-label')
+            Ctiy
           .col-sm-7
-            %input(type='text' class='form-control' id='full_name'  placeholder='Company address...')
+            %select.form-control#city
+              %option Ljubljana
+              %option Berlin
+              %option London
+              %option New Yourk
+              %option Los Angeles
         .form-group
-          %label(for='full_name' class='col-sm-4 control-label') City
-          .col-sm-7
-            %input(type='text' class='form-control' id='full_name'  placeholder='Company City...')
-        .form-group
-          %label(for='full_name' class='col-sm-4 control-label')
+          %label(for='price-range' class='col-sm-4 control-label')
             Price range
           .col-sm-7
-            %select.form-control
+            %select.form-control#price-range
               %option € (for anyone)
               %option €€ (for rich people)
               %option €€€ (for richer people)
               %option €€€€ (you can't afford that)
               %option €€€€€ (Bill Gates only section)
         .form-group
-          %label(for='full_name' class='col-sm-4 control-label')
+          %label(for='category' class='col-sm-4 control-label')
             Category
           .col-sm-7
-            %select(class='form-control' multiple)
+            %select(class='form-control' id='category' multiple)
               %option Restaurants
               %option Travel
               %option Hotels
