--- a/app/views/ui/about-me-my-company.html.haml
+++ b/app/views/ui/about-me-my-company.html.haml
@@ -42,8 +42,6 @@
         = fa_icon 'eur', class: 'eur-empty'
     .row
       %br
-      %div Nobelova street 34
-      %div 1000 Ljubljana
-      %div Slovenia
+      %div Ljubljana, Slovenia
       %br
       %a(href='#' class='btn btn-primary') Edit Company
