--- a/app/views/ui/category-show-page.html.haml
+++ b/app/views/ui/category-show-page.html.haml
@@ -22,9 +22,7 @@
           = fa_icon 'eur', class: 'eur-empty'
           = fa_icon 'eur', class: 'eur-empty'
     .col-md-5.address
-      %div Nobelova street 34
-      %div 1000 Ljubljana
-      %div Slovenia
+      %div Ljubljana, Slovenia
     .col-md-2
       %br
       %br
@@ -53,9 +51,7 @@
           = fa_icon 'eur', class: 'eur-empty'
           = fa_icon 'eur', class: 'eur-empty'
     .col-md-5.address
-      %div Nobelova street 34
-      %div 1000 Ljubljana
-      %div Slovenia
+      %div Ljubljana, Slovenia
     .col-md-2
       %br
       %br
@@ -84,9 +80,7 @@
           = fa_icon 'eur', class: 'eur-empty'
           = fa_icon 'eur', class: 'eur-empty'
     .col-md-5.address
-      %div Nobelova street 34
-      %div 1000 Ljubljana
-      %div Slovenia
+      %div Ljubljana, Slovenia
     .col-md-2
       %br
       %br
