--- a/app/views/ui/search-results.html.haml
+++ b/app/views/ui/search-results.html.haml
@@ -23,9 +23,7 @@
           = fa_icon 'eur', class: 'eur-empty'
           = fa_icon 'eur', class: 'eur-empty'
     .col-md-5.address
-      %div Nobelova street 34
-      %div 1000 Ljubljana
-      %div Slovenia
+      %div Ljubljana, Slovenia
     .col-md-2
       %br
       %br
@@ -54,9 +52,7 @@
           = fa_icon 'eur', class: 'eur-empty'
           = fa_icon 'eur', class: 'eur-empty'
     .col-md-5.address
-      %div Nobelova street 34
-      %div 1000 Ljubljana
-      %div Slovenia
+      %div Ljubljana, Slovenia
     .col-md-2
       %br
       %br
@@ -88,9 +84,7 @@
           = fa_icon 'eur', class: 'eur-empty'
           = fa_icon 'eur', class: 'eur-empty'
     .col-md-5.address
-      %div Nobelova street 34
-      %div 1000 Ljubljana
-      %div Slovenia
+      %div Ljubljana, Slovenia
     .col-md-2
       %br
       %br
