--- a/app/views/shared/_main_navigation.html.haml
+++ b/app/views/shared/_main_navigation.html.haml
@@ -41,7 +41,7 @@
             %li
               %a(href='#') About Me
             %li
-              %a(href='#') Account Settings
+              = link_to 'Account Settings', edit_user_path(current_user)
             %li(role='separator' class='divider')
             %li
               = link_to 'Log Out', logout_path
