adds companies controller views

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -41,6 +41,11 @@ $input-border-focus: $brown
 $input-color-placeholder: $brown
 $btn-default-border: $brown
 
+// alert colors
+$state-danger-text: red
+$state-danger-bg: white
+$state-danger-border: darken($state-danger-bg, 5%)
+
 // dropdowns
 $dropdown-bg: #fff
 $nav-link-hover-bg: rgba($green, 0.8)
