--- a/app/views/companies/edit.html.haml
+++ b/app/views/companies/edit.html.haml
@@ -1,8 +1,7 @@
-%h1.text-center.large-heading My Settings
+%h1.text-center.large-heading Add new Company
 %br
-
 .row
   = render 'shared/left_navigation'
-  .col-md-8
+  .col-md-6
     %br
     = render 'form'
