add Categories controller views

--- a/app/views/shared/_left_navigation.html.haml
+++ b/app/views/shared/_left_navigation.html.haml
@@ -13,3 +13,7 @@
           = link_to 'All Cities', cities_path
         %li(role='presentation' class="#{cp(new_city_path)}")
           = link_to 'Add new City', new_city_path
+        %li(role='presentation' class="#{cp(categories_path)}")
+          = link_to 'All Categories', categories_path
+        %li(role='presentation' class="#{cp(new_category_path)}")
+          = link_to 'Add new Category', new_category_path
