--- a/app/views/shared/_left_navigation.html.haml
+++ b/app/views/shared/_left_navigation.html.haml
@@ -3,6 +3,8 @@
     %ul.nav.nav-pills.nav-stacked.text-center
       %li(role='presentation' class="#{cp(edit_user_path(current_user))}")
         = link_to 'Settings', edit_user_path(current_user)
+      %li(role='presentation' class="#{cp(reviews_user_path(current_user))}")
+        = link_to 'Reviews', reviews_user_path(current_user)
       - if owner? || admin?
         %li(role='presentation' class="#{cp(user_companies_path(current_user))}")
           = link_to 'My Companies', user_companies_path(current_user)
